<resources>

    <string name="app_name">LibVault</string>

    <string name="pref_download_dir_not_set">No download directory has been set</string>
    <string name="pref_general_config_interface_title">Interface</string>
    <string name="pref_general_library_manager">LibVault</string>
    <string name="pref_general_config_list_preference_title">Theme</string>
    <string name="pref_general_config_switch_pref_title">Material You</string>
    <string name="pref_general_config_switch_pref_summ">Follow the dynamic material theme of your device</string>
    <string name="pref_download_directory">Download directory</string>

    <string name="theme_auto">Auto</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <string name="title_about">About Application</string>

    <string name="exit">Exit</string>
    <string name="dependency">Dependency</string>
    <string name="til_dependency_hint">Example: org.tomlj:tomlj:1.0.0</string>
    <string name="download">Download</string>
    <string name="skip_sub_dependencies">Include transitive dependencies</string>
    <string name="msg_share_error">Share error message</string>
    <string name="msg_error_format">Detailed error message</string>
    <string name="msg_error_while_collecting_error">An error while getting error</string>
    <string name="msg_app_crashed">App Crashed</string>
    <string name="msg_app_crashed_error">An error occurred</string>
    <string name="share">Share error</string>
    <string name="request_again">Request again</string>
    <string name="delete">Delete</string>
    <string name="restart">Restart</string>
    <string name="cancel">Cancel</string>
    <string name="pick_folder">Select Folder</string>
    <string name="dialog_config_theme_title">Choose theme</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="welcome">Welcome</string>
    <string name="dependency_manager">Downloader</string>
    <string name="dependency_manager_desc">An ultra-fast dependency manager for Sketchware Pro</string>
    <string name="sketchware_extension">Sketchware Extension</string>
    <string name="community">Community</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>

    <string name="msg_title_yt">Visit Our Channel</string>
    <string name="msg_yt_body">Explore our YouTube channel for informative and engaging content</string>
    <string name="dialog_yt_positive_botton">Visit channel</string>
    <string name="dialog_yt_negative_botton">Not Now</string>
    <string name="tk_community">LibVault Community</string>
    <string name="tk_com_telegram_channel">Telegram Channel</string>
    <string name="tk_com_blog">Blogger</string>
    <string name="tk_com_msg">Discover, Create, Share</string>
    <string name="tk_com_telegram_group">Telegram group</string>

    <string name="storage_permission_continue">Continue</string>
    <string name="storage_permission_cancel">@string/cancel</string>
    <string name="storage_permission_denied">Storage permission denied!</string>
    <string name="storage_permission_request_again">@string/request_again</string>
    <string name="storage_permission_denial_prompt">This application needs storage permission to download and manage library files</string>
    <string name="delete_file_title">@string/delete</string>
    <string name="delete_file_message">Do you want to delete\n `%s?`</string>
    <string name="delete_folder_message">Do you want to delete\n `%s` and its contents?</string>
    <string name="select_download_dir_title">Choose a download folder</string>
    <string name="select_download_dir_msg">Choose a folder to store the downloaded Sketchware Pro libraries</string>
    <string name="pref_download_directory_summary">Default: /Downloads/LibVault</string>
    <string name="desc_more_options">More options</string>
    <string name="desc_no_downloads_found">No downloads found icon</string>
    <string name="message_no_downloads">No Downloads</string>
    <string name="message_no_downloads_description">Downloaded libraries will appear here.</string>
    <string name="downloads">Downloads</string>
    <string name="desc_library_library_icon">Library icon</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="action_move">Move</string>

</resources>
