<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        app:title="@string/pref_general_config_interface_title">

        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/dialog_config_theme_title"
            android:entries="@array/theme"
            android:entryValues="@array/theme_values"
            app:key="pref_app_theme"
            app:title="@string/pref_general_config_list_preference_title"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_day_night" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:title="@string/pref_general_library_manager">

        <Preference
            app:key="pref_library_manager"
            app:title="@string/pref_download_directory"
            app:summary="@string/pref_download_directory_summary"
            app:icon="@drawable/ic_download_outline" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:title="App Information">

        <Preference
            android:key="pref_about"
            android:title="About"
            android:summary="View app information and developer details"
            android:icon="@drawable/ic_info" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
